// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginModal snapshot tests should match the snapshot at OTP input stage 1`] = `
[
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      signUp
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      OTPEnter
    </p>
    <div
      className="login-modal-input-otp-container"
    >
      <input
        data-testid="OTPInput0"
        maxLength={1}
        onChange={[Function]}
        onFocus={[Function]}
        pattern="[0-9]"
        type="number"
      />
      <input
        data-testid="OTPInput1"
        maxLength={1}
        onChange={[Function]}
        onFocus={[Function]}
        pattern="[0-9]"
        type="number"
      />
      <input
        data-testid="OTPInput2"
        maxLength={1}
        onChange={[Function]}
        onFocus={[Function]}
        pattern="[0-9]"
        type="number"
      />
      <input
        data-testid="OTPInput3"
        maxLength={1}
        onChange={[Function]}
        onFocus={[Function]}
        pattern="[0-9]"
        type="number"
      />
      <input
        data-testid="OTPInput4"
        maxLength={1}
        onChange={[Function]}
        onFocus={[Function]}
        pattern="[0-9]"
        type="number"
      />
      <input
        data-testid="OTPInput5"
        maxLength={1}
        onChange={[Function]}
        onFocus={[Function]}
        pattern="[0-9]"
        type="number"
      />
    </div>
    <p
      className="login-modal-input-help login-modal-opaque-text"
    >
      OTPExplanation
    </p>
    <p
      className="login-modal-input-help login-modal-correct-input"
    >
      OTPSendAgain
    </p>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at OTP loading stage 1`] = `
[
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      signUp
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      OTPVerifying
    </p>
  </div>,
  <div
    className="login-modal-button-container"
  />,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at mail input stage 1`] = `
[
  <header
    className="login-modal-navigation-container"
  >
    <button
      data-testid="goBackButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-go-back"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
    <button
      data-testid="cancelButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-cancel"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
  </header>,
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      signUp
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      onlyEmail
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="emailInput"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 1`] = `
[
  <header
    className="login-modal-navigation-container"
  >
    <button
      data-testid="goBackButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-go-back"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
    <button
      data-testid="cancelButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-cancel"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
  </header>,
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      signUp
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      enterPassword
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <p
      className="login-modal-input-help"
    >
      repeatPassword
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPasswordRepeat"
        onChange={[Function]}
        type="password"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 2`] = `
[
  <header
    className="login-modal-navigation-container"
  >
    <button
      data-testid="goBackButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-go-back"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
    <button
      data-testid="cancelButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-cancel"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
  </header>,
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      logIn
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      onlyEmail
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="emailInput"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
    <p
      className="login-modal-input-help"
    >
      enterPassword
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPasswordLogin"
        onChange={[Function]}
        type="password"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <div
      className="login-modal-two-buttons-on-one-row"
    >
      <p
        className="login-modal-correct-input"
        onClick={[Function]}
      >
        resetPassword
      </p>
      <button
        className="login-modal-button-black-on-green"
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 3`] = `
[
  <header
    className="login-modal-navigation-container"
  >
    <button
      data-testid="goBackButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-go-back"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
    <button
      data-testid="cancelButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-cancel"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
  </header>,
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      newPassword
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      mailForPasswordReset
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="emailInput"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      OTPSendSMS
    </button>
  </div>,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at password not match stage 1`] = `
[
  <header
    className="login-modal-navigation-container"
  >
    <button
      data-testid="goBackButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-go-back"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
    <button
      data-testid="cancelButton"
      onClick={[Function]}
    >
      <img
        alt="login-modal-navigation-cancel"
        className="login-modal-navigation-button"
        src="test-file-stub"
      />
    </button>
  </header>,
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      signUp
    </p>
    <p
      className="login-modal-header-description login-modal-opaque-text"
    >
      finikMapProductDescription
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      enterPassword
    </p>
    <div
      className="login-modal-input-box-container login-modal-wrong-input-border"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <p
      className="login-modal-input-help"
    >
      repeatPassword
    </p>
    <div
      className="login-modal-input-box-container login-modal-wrong-input-border"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPasswordRepeat"
        onChange={[Function]}
        type="password"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`LoginModal snapshot tests should match the snapshot at user welcome stage 1`] = `
[
  <div
    className="login-ellipses-container"
  >
    <div
      className="login-ellipse-left-container"
    >
      <div
        className="login-ellipse login-ellipse-green"
      />
    </div>
    <div
      className="login-ellipse-right-container"
    >
      <div
        className="login-ellipse login-ellipse-blue"
      />
    </div>
  </div>,
  <div
    className="login-modal-header-container"
  >
    <img
      alt="login-modal-logo"
      className="login-modal-logo"
      src="test-file-stub"
    />
    <p
      className="login-modal-header"
    >
      brand map
    </p>
    <p
      className="login-modal-header-description"
    >
      loginCallToAction
    </p>
  </div>,
  <div
    className="login-modal-input-container"
  />,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      accountLogin
    </button>
    <button
      className="login-modal-button-green-on-black"
      onClick={[Function]}
    >
      accountRegister
    </button>
  </div>,
]
`;
